FMWK-141 Code formatting and cleanup (#485)
Co-authored-by: yrizhkov <yrizhkov@aerospike.com>